fix bug #44214: crash with preg_replace_callback and global variables